tmc-langs-qmake/src/test/resources/invalid_quick_project/src/main.qml
import QtQuick 2.0
import QtQuick.Window 2.2

Window {
    id: window
    width: 620
    visible: true
    height: 420

    Clicker {
        width: 350
        height: 200
        anchors.centerIn: parent
    }

}
